docs: add anti-patterns and SearchTags for better MCP discoverability
Anti-patterns added to all pattern docs:
- signal-patterns: module-level signals, direct mutation, computed returning el
- behaviors: mixing UI, skipping service injection, service layer confusion
- forms: validating before touched, mutating field arrays
- portability: importing framework code directly, hardcoding dependencies
- shared-state: module-level signals, mutating service, skipping types
- async-loading: ignoring states, forgetting cleanup, ignoring AbortSignal
- composition-over-stores: monolithic state, manual sync, exposing raw signals
- error-handling: swallowing errors, throwing in computeds, ignoring resource errors
- refs: accessing before mount, forgetting cleanup, using for declarative updates

SearchTags system for improved discoverability:
- Add SearchTags.astro component (renders invisible HTML comments)
- Update generate-llms.mjs to convert SearchTags to @tags comments
- Tag all guides and pattern docs with relevant keywords
- Parser extracts @tags for search ranking

--- a/packages/docs/src/content/docs/guides/conditional-rendering.mdx
+++ b/packages/docs/src/content/docs/guides/conditional-rendering.mdx
@@ -3,6 +3,10 @@ title: Conditional Rendering
 description: Show, hide, and switch views with match().
 ---
 
+import SearchTags from '../../../components/SearchTags.astro';
+
+<SearchTags tags={["match", "conditional", "show-hide", "toggle", "switch", "if-else", "visibility"]} />
+
 `match()` swaps elements based on a reactive value. When the value changes, the old element is disposed and a new one takes its place.
 
 ---
