--- a/packages/docs/src/content/docs/guides/creating-a-service.mdx
+++ b/packages/docs/src/content/docs/guides/creating-a-service.mdx
@@ -3,6 +3,10 @@ title: Creating a Service
 description: The most basic Rimitive setup—composing modules into a reactive service.
 ---
 
+import SearchTags from '../../../components/SearchTags.astro';
+
+<SearchTags tags={["service", "compose", "setup", "configuration", "modules", "dependency-injection"]} />
+
 Here's the simplest Rimitive setup:
 
 ```typescript
