--- a/packages/docs/src/content/docs/guides/getting-started.mdx
+++ b/packages/docs/src/content/docs/guides/getting-started.mdx
@@ -3,6 +3,10 @@ title: Getting Started
 description: Get up and running with Rimitive in minutes.
 ---
 
+import SearchTags from '../../../components/SearchTags.astro';
+
+<SearchTags tags={["getting-started", "installation", "setup", "quickstart", "hello-world", "first-app"]} />
+
 Rimitive is built for **progressive complexity** and **low up-front commitment**. Start with just signals in a vanilla TS file. Months later, you might have a full app with routing, SSR, and streaming—without rewrites, migrations, or a "now we need a real framework" moment.
 
 Compose only the primitives you need, opting in as you go!
@@ -24,6 +28,8 @@ Patterns and architectures in rimitive are designed for **low coupling, high coh
 ```bash
 npm install @rimitive/core @rimitive/signals @rimitive/view
 ```
+
+<SearchTags tags={["counter", "example", "tutorial", "reactive-state", "dom-rendering"]} />
 
 ## Your First App
 
