--- a/packages/docs/src/content/docs/patterns/shared-state.mdx
+++ b/packages/docs/src/content/docs/patterns/shared-state.mdx
@@ -4,6 +4,9 @@ description: How to share state across components without prop drilling.
 ---
 
 import { Aside } from '@astrojs/starlight/components';
+import SearchTags from '../../../components/SearchTags.astro';
+
+<SearchTags tags={["context", "shared-state", "global-state", "service-threading", "theme", "user", "prop-drilling"]} />
 
 Other frameworks have "context"—a way to pass values down the component tree without threading them through every intermediate component. In React, it's `createContext` and `useContext`. In Solid, it's similar.
 
@@ -150,3 +153,125 @@ The service threading pattern is explicit, type-safe, and composes naturally. It
 <Aside type="tip">
 If you find yourself passing the same service through many layers, consider whether those intermediate components actually need to be separate. Rimitive's composition model often leads to flatter component hierarchies than you might expect.
 </Aside>
+
+---
+
+## Anti-patterns
+
+### Don't Use Module-Level Signals for Shared State
+
+Creating signals at module scope seems convenient, but it causes state to leak across your entire application and makes testing nearly impossible:
+
+```typescript
+// ❌ WRONG - module-level signal is global singleton
+const theme = signal<'light' | 'dark'>('light');
+const user = signal<User | null>(null);
+
+const Header = (svc: Service) => {
+  // Reads global state - can't test in isolation
+  return svc.el('header')(theme());
+};
+```
+
+```typescript
+// ✅ CORRECT - state lives in the service, threaded explicitly
+const App = (svc: Service) => {
+  const theme = svc.signal<'light' | 'dark'>('light');
+  const user = svc.signal<User | null>(null);
+
+  const appSvc = { ...svc, theme, user };
+
+  return svc.el('div')(Header(appSvc));
+};
+```
+
+The service threading pattern keeps state local to component trees and enables testing with isolated services.
+
+### Don't Mutate the Service Object
+
+Mutating the service directly instead of creating a new one causes subtle bugs—all components sharing that service see the mutation:
+
+```typescript
+// ❌ WRONG - mutates shared service object
+const DarkSection = (svc: AppService) => {
+  svc.theme = svc.signal('dark');  // Mutates the original!
+  return svc.el('section')(/* ... */);
+};
+```
+
+```typescript
+// ✅ CORRECT - create a new extended service
+const DarkSection = (svc: AppService) => {
+  const darkSvc = { ...svc, theme: svc.signal('dark') };
+  return svc.el('section')(Child(darkSvc));
+};
+```
+
+### Don't Skip Type Annotations for Extended Services
+
+Without proper types, you lose the main benefit of explicit service threading—knowing exactly what's available:
+
+```typescript
+// ❌ WRONG - untyped extension loses type safety
+const App = (svc: Service) => {
+  const theme = svc.signal('light');
+  const appSvc = { ...svc, theme };  // Type is just Service & { theme: ... }
+
+  // Later components have no idea what's in the service
+  return svc.el('div')(Header(appSvc));  // Header type is unclear
+};
+```
+
+```typescript
+// ✅ CORRECT - explicit service types
+type AppService = Service & {
+  theme: Readable<'light' | 'dark'>;
+};
+
+const App = (svc: Service) => {
+  const theme = svc.signal<'light' | 'dark'>('light');
+  const appSvc: AppService = { ...svc, theme };
+
+  // Header explicitly declares what it needs
+  return svc.el('div')(Header(appSvc));
+};
+
+const Header = (svc: AppService) => {
+  // TypeScript knows exactly what's available
+  const { el, theme } = svc;
+  return el('header')(/* ... */);
+};
+```
+
+### Don't Create Shared State Inside Render
+
+Shared state should be created once and threaded through. Creating it inside component bodies means it's recreated on each instantiation:
+
+```typescript
+// ❌ WRONG - creates new signal every time component is instantiated
+const ThemedSection = (svc: Service) => (props: { children: RefSpec }) => {
+  // This creates a NEW theme signal for every ThemedSection instance!
+  const theme = svc.signal<'light' | 'dark'>('light');
+  const themedSvc = { ...svc, theme };
+
+  return svc.el('section')(props.children);
+};
+```
+
+```typescript
+// ✅ CORRECT - shared state created at app level, threaded down
+const App = (svc: Service) => {
+  // Created once at the app level
+  const theme = svc.signal<'light' | 'dark'>('light');
+  const appSvc: AppService = { ...svc, theme };
+
+  return svc.el('div')(
+    ThemedSection(appSvc)({ children: /* ... */ })
+  );
+};
+
+const ThemedSection = (svc: AppService) => (props: { children: RefSpec }) => {
+  // Uses existing theme from service, doesn't create new one
+  return svc.el('section')(props.children);
+};
+```
